k8s/k8s-aks/job-service-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service-deployment
  labels:
    component: job-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: job-service
  template:
    metadata:
      labels:
        component: job-service
    spec:
      containers:
        - name: job-service
          image: pfa-job-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: job-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: job-service
  ports:
    - port: 8080
      targetPort: 8080
