k8s/k8s-aks/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ExternalName
  externalName: linhai-mysql.mysql.database.azure.com
