k8s/k8s-aks/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-cluster-ip-service
              servicePort: 3000
          - path: /api/account/?(.*)
            backend:
              serviceName: account-service-cluster-ip-service
              servicePort: 8080
          - path: /api/common/?(.*)
            backend:
              serviceName: common-service-cluster-ip-service
              servicePort: 8080
          - path: /api/stock/?(.*)
            backend:
              serviceName: stock-service-cluster-ip-service
              servicePort: 8080
          - path: /api/job/?(.*)
            backend:
              serviceName: job-service-cluster-ip-service
              servicePort: 8080
